--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nami</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <!-- Time and Greetings  -->
+
+      <div class="timeBlock">
+        <div class="clock">
+          <div id="hour"></div>
+          <div id="separator"></div>
+          <div id="minutes"></div>
+        </div>
+        <div id="greetings"></div>
+      </div>
+
+      <!-- Date and Weather  -->
+
+      <div class="weatherBlock">
+        <div class="date">
+          <div id="month"></div>
+          <div id="day"></div>
+        </div>
+        <div class="weather">
+          <div class="weatherIcon"></div>
+          <div class="weatherValue">
+            <p>- °<span class="g">c</span></p>
+          </div>
+          <div class="weatherDescription">
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="linksBlock" id="linksBlock">
+        <div class="linksBlockLeft" id="linksBlockLeft"></div>
+        <div class="linksBlockRight" id="linksBlockRight"></div>
+      </div>
+    </div>
+
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+      lucide.createIcons();
+    </script>
+  </body>
 </html>
