--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
       <div class="timeBlock">
         <div class="clock">
           <div id="hour"></div>
-          <div id="separator"></div>
+          <div id="separator">:</div>
           <div id="minutes"></div>
         </div>
-        <div id="greetings"></div>
+        <div id="greeting"></div>
       </div>
 
       <!-- Date and Weather  -->
@@ -36,10 +36,7 @@
         </div>
       </div>
 
-      <div class="linksBlock" id="linksBlock">
-        <div class="linksBlockLeft" id="linksBlockLeft"></div>
-        <div class="linksBlockRight" id="linksBlockRight"></div>
-      </div>
+      <div class="forecastBlock" id="forecastBlock"></div>
     </div>
 
     <script src="https://unpkg.com/lucide@latest"></script>
