--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
           <div id="day"></div>
         </div>
         <div class="weather">
-          <div class="weatherIcon"></div>
+          <div class="weatherIcon">
+            <img src="./icons/unknown.png" alt="unknown" />
+          </div>
           <div class="weatherValue">
             <p>- °<span class="g">c</span></p>
           </div>
@@ -38,10 +40,5 @@
 
       <div class="forecastBlock" id="forecastBlock"></div>
     </div>
-
-    <script src="https://unpkg.com/lucide@latest"></script>
-    <script>
-      lucide.createIcons();
-    </script>
   </body>
 </html>
