--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gardevoir" />
     <title>Nami</title>
   </head>
   <body>
@@ -26,9 +31,7 @@
           <div id="day"></div>
         </div>
         <div class="weather">
-          <div class="weatherIcon">
-            <img src="./icons/unknown.png" alt="unknown" />
-          </div>
+          <img class="weatherIcon" src="./icons/unknown.png" alt="unknown" />
           <div class="weatherValue">
             <p>- °<span class="g">c</span></p>
           </div>
